--- a/config/AX6_5.10.100.config
+++ b/config/AX6_5.10.100.config
@@ -20,6 +20,8 @@ CONFIG_LUCI_LANG_zh_Hans=y
 CONFIG_PACKAGE_kmod-zram=y
 CONFIG_PACKAGE_zram-swap=y
 
+
+
 #CONFIG_PACKAGE_ipv6helper=y
 #ipv6
 # CONFIG_PACKAGE_dnsmasq is not set
@@ -32,9 +34,9 @@ CONFIG_PACKAGE_dnsmasq_full_dnssec=y
 CONFIG_PACKAGE_dnsmasq_full_ipset=y
 CONFIG_PACKAGE_dnsmasq_full_noid=y
 CONFIG_PACKAGE_dnsmasq_full_tftp=y
-#CONFIG_PACKAGE_6in4=y
-#CONFIG_PACKAGE_6rd=y
-#CONFIG_PACKAGE_6to4=y
+CONFIG_PACKAGE_6in4=y
+CONFIG_PACKAGE_6rd=y
+CONFIG_PACKAGE_6to4=y
 
 #删除默认的USB相关
 # CONFIG_PACKAGE_kmod-usb-core is not set
@@ -83,7 +85,7 @@ CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Xray=y
 
 
 # CONFIG_PACKAGE_luci-app-adbyby-plus is not set
-#CONFIG_PACKAGE_luci-app-adguardhome is not set
+# CONFIG_PACKAGE_luci-app-adguardhome is not set
 
 # CONFIG_PACKAGE_luci-app-advanced is not set
 # CONFIG_PACKAGE_luci-app-filetransfer is not set
@@ -92,52 +94,44 @@ CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Xray=y
 CONFIG_PACKAGE_luci-app-jd-dailybonus=y
 CONFIG_PACKAGE_luci-app-ddns=y
 
-#CONFIG_PACKAGE_luci-app-dawn is not set
-#CONFIG_PACKAGE_luci-app-n2n_v2 is not set
+# CONFIG_PACKAGE_luci-app-dawn is not set
+# CONFIG_PACKAGE_luci-app-n2n_v2 is not set
 
 CONFIG_PACKAGE_luci-app-netdata=y
 CONFIG_PACKAGE_luci-app-ntpc=y
-#CONFIG_PACKAGE_luci-app-dnsfilter is not set
-#CONFIG_PACKAGE_luci-app-nps is not set
 
-#CONFIG_PACKAGE_luci-app-oaf is not set
+# CONFIG_PACKAGE_luci-app-dnsfilter is not set
+# CONFIG_PACKAGE_luci-app-nps is not set
+
+# CONFIG_PACKAGE_luci-app-oaf is not set
 
 CONFIG_PACKAGE_luci-app-openclash=y
 
-CONFIG_PACKAGE_iptables-mod-fullconenat=y
-CONFIG_PACKAGE_iptables-mod-ipopt=y
 
-CONFIG_PACKAGE_kmod-ipt-fullconenat=y
-CONFIG_PACKAGE_kmod-ipt-ipopt=y
-
-
-CONFIG_PACKAGE_luci-app-dnsfilter=y
+# CONFIG_PACKAGE_luci-app-dnsfilter is not set
 CONFIG_PACKAGE_luci-app-filetransfer=y
-CONFIG_PACKAGE_luci-app-guest-wifi=y
-
-CONFIG_PACKAGE_luci-theme-argon=y
-CONFIG_PACKAGE_luci-app-argon-config=y
+# CONFIG_PACKAGE_luci-app-guest-wifi is not set
 
 
 CONFIG_PACKAGE_luci-app-diag-core=y
 
-
 CONFIG_PACKAGE_luci-app-ttyd=y
-CONFIG_PACKAGE_luci-app-udpxy=y
-CONFIG_PACKAGE_luci-app-uhttpd=y
+# CONFIG_PACKAGE_luci-app-udpxy is not set
+# CONFIG_PACKAGE_luci-app-uhttpd is not set
 
 CONFIG_PACKAGE_luci-app-unblockmusic=y
 CONFIG_PACKAGE_luci-app-unblockmusic_INCLUDE_UnblockNeteaseMusic_Go=y
 
-CONFIG_PACKAGE_luci-app-uugamebooster=y
+# CONFIG_PACKAGE_luci-app-uugamebooster is not set
 CONFIG_PACKAGE_luci-app-vlmcsd=y
 
 # CONFIG_PACKAGE_luci-app-vsftpd is not set
-CONFIG_PACKAGE_luci-app-wifischedule=y
-
-# CONFIG_PACKAGE_luci-app-nlbwmon is not set
+# CONFIG_PACKAGE_luci-app-wifischedule is not set
+CONFIG_PACKAGE_luci-app-nlbwmon=y
 
 #主题
+CONFIG_PACKAGE_luci-theme-argon=y
+CONFIG_PACKAGE_luci-app-argon-config=y
 CONFIG_PACKAGE_luci-theme-argon_armygreen=y
 CONFIG_PACKAGE_luci-theme-ifit=y
 
