--- a/config/5.10-ax6.config
+++ b/config/5.10-ax6.config
@@ -34,9 +34,9 @@ CONFIG_PACKAGE_dnsmasq_full_dnssec=y
 CONFIG_PACKAGE_dnsmasq_full_ipset=y
 CONFIG_PACKAGE_dnsmasq_full_noid=y
 CONFIG_PACKAGE_dnsmasq_full_tftp=y
-CONFIG_PACKAGE_6in4=y
-CONFIG_PACKAGE_6rd=y
-CONFIG_PACKAGE_6to4=y
+#CONFIG_PACKAGE_6in4=y
+#CONFIG_PACKAGE_6rd=y
+#CONFIG_PACKAGE_6to4=y
 
 #删除默认的USB相关
 # CONFIG_PACKAGE_kmod-usb-core is not set
@@ -113,7 +113,7 @@ CONFIG_PACKAGE_luci-app-filetransfer=y
 # CONFIG_PACKAGE_luci-app-guest-wifi is not set
 
 
-CONFIG_PACKAGE_luci-app-diag-core=y
+#CONFIG_PACKAGE_luci-app-diag-core is not set
 
 CONFIG_PACKAGE_luci-app-ttyd=y
 # CONFIG_PACKAGE_luci-app-udpxy is not set
