--- a/config/5.15-im-ax6.config
+++ b/config/5.15-im-ax6.config
@@ -55,6 +55,31 @@ CONFIG_PACKAGE_luci-app-turboacc_INCLUDE_BBR_CCA=y
 # CONFIG_PACKAGE_luci-app-turboacc_INCLUDE_DNSPROXY is not set
 
 
+
+CONFIG_PACKAGE_luci-app-passwall=y
+# CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Brook is not set
+CONFIG_PACKAGE_luci-app-passwall_INCLUDE_ChinaDNS_NG=y
+CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Haproxy=y
+# CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Hysteria is not set
+# CONFIG_PACKAGE_luci-app-passwall_INCLUDE_IPv6_Nat is not set
+# CONFIG_PACKAGE_luci-app-passwall_INCLUDE_NaiveProxy is not set
+CONFIG_PACKAGE_luci-app-passwall_INCLUDE_PDNSD=y
+CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Shadowsocks_Libev_Client=y
+CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Shadowsocks_Libev_Server=y
+# CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Shadowsocks_Rust_Client is not set
+CONFIG_PACKAGE_luci-app-passwall_INCLUDE_ShadowsocksR_Libev_Client=y
+# CONFIG_PACKAGE_luci-app-passwall_INCLUDE_ShadowsocksR_Libev_Server is not set
+CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Simple_Obfs=y
+# CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Trojan_GO is not set
+# CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Trojan_Plus is not set
+# CONFIG_PACKAGE_luci-app-passwall_INCLUDE_V2ray is not set
+# CONFIG_PACKAGE_luci-app-passwall_INCLUDE_V2ray_Plugin is not set
+CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Xray=y
+# CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Xray_Plugin is not set
+
+
+
+
 # CONFIG_FEED_nss_packages is not set
 # CONFIG_PACKAGE_kmod-tcp-bbr is not set
 
@@ -276,21 +301,6 @@ CONFIG_STRONGSWAN_ROUTING_TABLE_PRIO="220"
 CONFIG_TARGET_OPTIMIZATION="-Os -pipe -mcpu=cortex-a53+crypto+crc"
 CONFIG_TARGET_OPTIONS=y
 CONFIG_VERSIONOPT=y
-
-
-# CONFIG_VERSION_BUG_URL="https://t.me/nanopi_r4s"
-# CONFIG_VERSION_CODE="0623-3f9aff0"
-CONFIG_VERSION_CODE_FILENAMES=y
-CONFIG_VERSION_DIST="Autobuild"
-CONFIG_VERSION_FILENAMES=y
-# CONFIG_VERSION_HOME_URL="https://firmware.download.immortalwrt.eu.org/cnsztl/ipq807x/generic"
-CONFIG_VERSION_HWREV=""
-CONFIG_VERSION_MANUFACTURER="Xiaomi"
-# CONFIG_VERSION_MANUFACTURER_URL="http://www.miwifi.com/"
-CONFIG_VERSION_NUMBER="ALPHA"
-CONFIG_VERSION_PRODUCT="Redmi AX6"
-# CONFIG_VERSION_REPO="https://downloads.immortalwrt.org/snapshots"
-# CONFIG_VERSION_SUPPORT_URL="https://t.me/nanopi_r4s"
 
 
 # CONFIG_WPA_WOLFSSL is not set
