--- a/config/5.15-im-ax6.config
+++ b/config/5.15-im-ax6.config
@@ -3,9 +3,8 @@ CONFIG_TARGET_ipq807x_generic=y
 CONFIG_TARGET_ipq807x_generic_DEVICE_redmi_ax6=y
 
 CONFIG_DEVEL=y
-CONFIG_LIBCURL_NGHTTP2=y
-
 CONFIG_IMAGEOPT=y
+CONFIG_LIBCURL_NGHTTP2=y
 
 CONFIG_LIBCURL_COOKIES=y
 CONFIG_LIBCURL_CRYPTO_AUTH=y
@@ -14,7 +13,6 @@ CONFIG_LIBCURL_FTP=y
 CONFIG_LIBCURL_HTTP=y
 CONFIG_LIBCURL_OPENSSL=y
 CONFIG_LIBCURL_PROXY=y
-
 CONFIG_LIBCURL_TFTP=y
 CONFIG_LIBCURL_THREADED_RESOLVER=y
 CONFIG_LIBCURL_TLS_SRP=y
@@ -22,11 +20,6 @@ CONFIG_LIBCURL_UNIX_SOCKETS=y
 CONFIG_LIBSODIUM_MINIMAL=y
 CONFIG_NODEJS_16=y
 CONFIG_NODEJS_ICU_SMALL=y
-
-#语言
-#CONFIG_LUCI_LANG_en=y
-#CONFIG_LUCI_LANG_zh_Hans=y
-
 
 #虚拟内存
 CONFIG_PACKAGE_kmod-zram=y
@@ -40,6 +33,8 @@ CONFIG_PACKAGE_zram-swap=y
 # CONFIG_PACKAGE_kmod-usb-dwc3-qcom is not set
 # CONFIG_PACKAGE_kmod-usb3 is not set
 
+
+# CONFIG_PACKAGE_TURBOACC_INCLUDE_BBR_CCA is not set
 
 #tbcc加速默认集成高通通用SFE加速
 CONFIG_PACKAGE_TURBOACC_INCLUDE_DNSFORWARDER=y
@@ -56,6 +51,7 @@ CONFIG_PACKAGE_luci-app-turboacc_INCLUDE_BBR_CCA=y
 
 
 
+#passwall
 CONFIG_PACKAGE_luci-app-passwall=y
 # CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Brook is not set
 CONFIG_PACKAGE_luci-app-passwall_INCLUDE_ChinaDNS_NG=y
@@ -78,13 +74,6 @@ CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Xray=y
 # CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Xray_Plugin is not set
 
 
-
-
-# CONFIG_FEED_nss_packages is not set
-# CONFIG_PACKAGE_kmod-tcp-bbr is not set
-
-
-
 #CONFIG_PACKAGE_ipv6helper=y
 #ipv6
 # CONFIG_PACKAGE_dnsmasq is not set
@@ -100,6 +89,7 @@ CONFIG_PACKAGE_dnsmasq_full_tftp=y
 #CONFIG_PACKAGE_6in4=y
 #CONFIG_PACKAGE_6rd=y
 #CONFIG_PACKAGE_6to4=y
+
 
 
 CONFIG_PACKAGE_autocore-arm=y
@@ -150,13 +140,16 @@ CONFIG_PACKAGE_kmod-iptunnel6=y
 CONFIG_PACKAGE_kmod-lib-crc32c=y
 CONFIG_PACKAGE_kmod-lib-zlib-deflate=y
 CONFIG_PACKAGE_kmod-lib-zlib-inflate=y
+CONFIG_PACKAGE_kmod-netlink-diag=y
 CONFIG_PACKAGE_kmod-nf-socket=y
 CONFIG_PACKAGE_kmod-nf-tproxy=y
 CONFIG_PACKAGE_kmod-nfnetlink-queue=y
+# CONFIG_PACKAGE_kmod-tcp-bbr is not set
 CONFIG_PACKAGE_kmod-tun=y
-
-
-
+# CONFIG_PACKAGE_kmod-usb-core is not set
+# CONFIG_PACKAGE_kmod-usb-dwc3 is not set
+# CONFIG_PACKAGE_kmod-usb-dwc3-qcom is not set
+# CONFIG_PACKAGE_kmod-usb3 is not set
 CONFIG_PACKAGE_libatomic=y
 CONFIG_PACKAGE_libbpf=y
 CONFIG_PACKAGE_libcap=y
@@ -181,57 +174,48 @@ CONFIG_PACKAGE_libsodium=y
 CONFIG_PACKAGE_libstdcpp=y
 CONFIG_PACKAGE_libuci-lua=y
 CONFIG_PACKAGE_libudns=y
-CONFIG_PACKAGE_libustream-openssl=y
-# CONFIG_PACKAGE_libustream-wolfssl is not set
 CONFIG_PACKAGE_libuuid=y
 CONFIG_PACKAGE_libuv=y
-# CONFIG_PACKAGE_libwolfssl is not set
 CONFIG_PACKAGE_libyaml=y
 CONFIG_PACKAGE_lrzsz=y
-
+CONFIG_PACKAGE_lua-neturl=y
 CONFIG_PACKAGE_luci-app-argon-config=y
-
 CONFIG_PACKAGE_luci-app-arpbind=y
-# CONFIG_PACKAGE_luci-app-ddns is not set
-
+CONFIG_PACKAGE_luci-app-ddns=y
 CONFIG_PACKAGE_luci-app-filetransfer=y
-# CONFIG_PACKAGE_luci-app-ipsec-vpnd is not set
 
 CONFIG_PACKAGE_luci-app-openclash=y
 
-# CONFIG_PACKAGE_luci-app-ssr-plus is not set
-#CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_IPT2Socks=y
-#CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_ShadowsocksR_Libev_Server=y
 
-#CONFIG_PACKAGE_shadowsocks-rust-sslocal=y
-#CONFIG_PACKAGE_shadowsocks-rust-ssserver=y
-#CONFIG_PACKAGE_shadowsocksr-libev-ssr-check=y
-#CONFIG_PACKAGE_shadowsocksr-libev-ssr-local=y
-#CONFIG_PACKAGE_shadowsocksr-libev-ssr-redir=y
-#CONFIG_PACKAGE_shadowsocksr-libev-ssr-server=y
-#CONFIG_PACKAGE_simple-obfs-client=y
+#ssr-plus
+CONFIG_PACKAGE_luci-app-ssr-plus=y
+CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_IPT2Socks=y
+CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_ShadowsocksR_Libev_Server=y
+CONFIG_PACKAGE_shadowsocks-rust-sslocal=y
+CONFIG_PACKAGE_shadowsocks-rust-ssserver=y
+CONFIG_PACKAGE_shadowsocksr-libev-ssr-check=y
+CONFIG_PACKAGE_shadowsocksr-libev-ssr-local=y
+CONFIG_PACKAGE_shadowsocksr-libev-ssr-redir=y
+CONFIG_PACKAGE_shadowsocksr-libev-ssr-server=y
+CONFIG_PACKAGE_simple-obfs-client=y
 
-
-# CONFIG_PACKAGE_luci-app-uhttpd is not set
-#CONFIG_PACKAGE_luci-app-unblockneteasemusic is not set
-# CONFIG_PACKAGE_luci-app-upnp is not set
+CONFIG_PACKAGE_luci-app-uhttpd=y
+CONFIG_PACKAGE_luci-app-unblockneteasemusic=y
+CONFIG_PACKAGE_luci-app-upnp=y
 CONFIG_PACKAGE_luci-app-vlmcsd=y
-
-
-# CONFIG_PACKAGE_luci-app-zerotier is not set
+CONFIG_PACKAGE_luci-app-zerotier=y
 CONFIG_PACKAGE_luci-i18n-argon-config-zh-cn=y
-# CONFIG_PACKAGE_luci-i18n-ipsec-vpnd-zh-cn is not set
-# CONFIG_PACKAGE_luci-i18n-uhttpd-zh-cn is not set
+CONFIG_PACKAGE_luci-i18n-arpbind-zh-cn=y
+CONFIG_PACKAGE_luci-i18n-ddns-zh-cn=y
+CONFIG_PACKAGE_luci-i18n-filetransfer-zh-cn=y
+CONFIG_PACKAGE_luci-i18n-ssr-plus-zh-cn=y
+CONFIG_PACKAGE_luci-i18n-uhttpd-zh-cn=y
+CONFIG_PACKAGE_luci-i18n-upnp-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-vlmcsd-zh-cn=y
-# CONFIG_PACKAGE_luci-i18n-zerotier-zh-cn is not set
+CONFIG_PACKAGE_luci-i18n-zerotier-zh-cn=y
 CONFIG_PACKAGE_luci-proto-bonding=y
 CONFIG_PACKAGE_luci-proto-relay=y
-
-
 CONFIG_PACKAGE_luci-theme-argon=y
-
-
-CONFIG_PACKAGE_mhz=y
 CONFIG_PACKAGE_microsocks=y
 CONFIG_PACKAGE_miniupnpd-iptables=y
 CONFIG_PACKAGE_node=y
@@ -251,13 +235,14 @@ CONFIG_PACKAGE_ruby-stringio=y
 CONFIG_PACKAGE_ruby-strscan=y
 CONFIG_PACKAGE_ruby-yaml=y
 
+
 CONFIG_PACKAGE_strongswan=y
 CONFIG_PACKAGE_strongswan-charon=y
 CONFIG_PACKAGE_strongswan-ipsec=y
-CONFIG_PACKAGE_strongswan-minimal=y
 CONFIG_PACKAGE_strongswan-mod-aes=y
 CONFIG_PACKAGE_strongswan-mod-gmp=y
 CONFIG_PACKAGE_strongswan-mod-hmac=y
+CONFIG_PACKAGE_strongswan-mod-kdf=y
 CONFIG_PACKAGE_strongswan-mod-kernel-libipsec=y
 CONFIG_PACKAGE_strongswan-mod-kernel-netlink=y
 CONFIG_PACKAGE_strongswan-mod-nonce=y
@@ -270,43 +255,23 @@ CONFIG_PACKAGE_strongswan-mod-updown=y
 CONFIG_PACKAGE_strongswan-mod-x509=y
 CONFIG_PACKAGE_strongswan-mod-xauth-generic=y
 CONFIG_PACKAGE_strongswan-mod-xcbc=y
-
-
-# CONFIG_PACKAGE_luci-app-ramfree is not set
-#CONFIG_PACKAGE_luci-i18n-ramfree-zh-cn=y
-
-# CONFIG_PACKAGE_luci-app-ttyd is not set
-#CONFIG_PACKAGE_luci-i18n-ttyd-zh-cn=y
-#CONFIG_PACKAGE_ttyd=y
-
-
-
 CONFIG_PACKAGE_tcping=y
-# CONFIG_PACKAGE_terminfo is not set
+CONFIG_PACKAGE_terminfo=y
+CONFIG_PACKAGE_unzip=y
 CONFIG_PACKAGE_vlmcsd=y
-
-
 CONFIG_PACKAGE_wget-ssl=y
-# CONFIG_PACKAGE_wpad-basic-wolfssl is not set
-CONFIG_PACKAGE_wpad-openssl=y
 CONFIG_PACKAGE_xray-core=y
-
-
-# CONFIG_PACKAGE_zerotier is not set
-
-
+CONFIG_PACKAGE_zerotier=y
 CONFIG_PACKAGE_zlib=y
 CONFIG_STRONGSWAN_ROUTING_TABLE="220"
 CONFIG_STRONGSWAN_ROUTING_TABLE_PRIO="220"
 CONFIG_TARGET_OPTIMIZATION="-Os -pipe -mcpu=cortex-a53+crypto+crc"
 CONFIG_TARGET_OPTIONS=y
 CONFIG_VERSIONOPT=y
-
-
-#CONFIG_VERSION_BUG_URL="https://t.me/nanopi_r4s"
-#CONFIG_VERSION_CODE="0623-3f9aff0"
+CONFIG_VERSION_BUG_URL="https://t.me/nanopi_r4s"
+CONFIG_VERSION_CODE="0824-d5ec897"
 CONFIG_VERSION_CODE_FILENAMES=y
-CONFIG_VERSION_DIST="OpenWrt"
+CONFIG_VERSION_DIST="ImoutoWrt"
 CONFIG_VERSION_FILENAMES=y
 CONFIG_VERSION_HOME_URL="https://firmware.download.immortalwrt.eu.org/cnsztl/ipq807x/generic"
 CONFIG_VERSION_HWREV=""
@@ -316,9 +281,4 @@ CONFIG_VERSION_NUMBER="ALPHA"
 CONFIG_VERSION_PRODUCT="Redmi AX6"
 CONFIG_VERSION_REPO="https://downloads.immortalwrt.org/snapshots"
 CONFIG_VERSION_SUPPORT_URL="https://t.me/nanopi_r4s"
-# CONFIG_WPA_WOLFSSL is not set
-CONFIG_PACKAGE_kmod-nls-base=y
-
-
-# CONFIG_WPA_WOLFSSL is not set
 CONFIG_PACKAGE_kmod-nls-base=y
