--- a/config/5.15-pr-ax6.config
+++ b/config/5.15-pr-ax6.config
@@ -49,14 +49,15 @@ CONFIG_PACKAGE_dnsmasq_full_tftp=y
 
 
 #NSS加速相关
-
-
 CONFIG_PACKAGE_cgi-io=y
-
 CONFIG_PACKAGE_kmod-qca-ssdk-nohnat=y
 CONFIG_PACKAGE_kmod-qca-nss-drv=y
 CONFIG_PACKAGE_kmod-qca-nss-dp=y
-
+CONFIG_PACKAGE_kmod-qca-nss-drv-64=y
+CONFIG_PACKAGE_kmod-qca-nss-drv-pppoe-64=y
+CONFIG_PACKAGE_kmod-qca-nss-ecm-64=y
+CONFIG_PACKAGE_kmod-qca-nss-drv-bridge-mgr-64=y
+CONFIG_PACKAGE_kmod-qca-nss-drv-vlan-mgr-64=y
 
 CONFIG_PACKAGE_luci-app-passwall=y
 # CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Brook is not set
